--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ body {
 
 h2 {
   font-size: calc(15px + 1vw);
-  margin: 2vw;
+  margin: 4vw auto;
+}
+
+.row {
+  margin: 25px auto;
 }
 
 /* -------------------------------------- */
@@ -72,4 +76,30 @@ footer.row ul {
 footer.row a {
   text-decoration: none;
   color: white;
+}
+
+.surrounded-title:before, .surrounded-title:after {
+  content: "";
+  display: block;
+  margin: 0 10px;
+  border-radius: 50%;
+  height: 45px;
+  width: 45px;
+  vertical-align: -50%;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: 0.9px 0.9px 0.9px #cc5f00, inset 0.9px 0.9px 0.9px #cc5f00;
+  border: 4.0909090909px solid #FF7700;
+}
+
+.one-ring:before {
+  content: "";
+  display: block;
+  margin: 0 10px;
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+  vertical-align: -50%;
+  background-color: rgba(0, 0, 0, 0);
+  box-shadow: 3px 3px 3px #cccc00, inset 3px 3px 3px #cccc00;
+  border: 13.6363636364px solid yellow;
 }
