--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@ $main-color: #FF7700;
 $background-color: #EDEDED;
 $main-font-color: #2B2B2B;
 $golden: yellow;
+$separator: #666666;
 
 @mixin ring($size, $color){
   border-radius: 50%;
@@ -116,5 +117,12 @@ footer.row {
     display: block;
     margin: 0 10px;
     @include ring(150px, $golden);
+  }
+}
+
+@for $i from 1 through 6 {
+  .chained-ring:nth-of-type(#{$i}) {
+    @include ring(35px * (1+($i/3)), $separator);
+    margin-right: -((35px * (1+($i/2)))*0.35);
   }
 }
